<resources>
    <string name="app_name">MatchApp</string>


    <!--Splash Screen -->
    <string name="alertErrorTittle"> Load Error </string>
    <string name="alertError">Could not load requested data.</string>
    <string name="connectionTimeoutTittle">Connection Timeout</string>
    <string name="connectionTimeout">Please check your internet connection</string>
    <string name="retry">Retry</string>

    <!--Home Screen -->
    <string name="all_leagues">All leagues</string>
    <string name="vs">VS</string>
    <string name="searchTeam">Search Team</string>
    <string name="viewLeagueTable">View League Table</string>
    <string name="pleaseWait">Please wait...</string>
    <string name="gettingMatch">Getting match info...</string>
    <string name="gettingLeagueTable">Getting league table info...</string>
    <string name="ok">OK</string>

    <string name="noTableTittle"> No league table </string>
    <string name="noTable">The selected soccer season does not have a league table</string>

    <!--Fixture Details Screen -->
    <string name="home">Home</string>
    <string name="away">Away</string>
    <string name="head2head">Head2Head</string>
    <string name="matchDay">Matchday&#160;</string>
    <string name="startTime">Start time:&#160;</string>
    <string name="search_hint">Search a team</string>
    <string name="versus">VS</string>
    <string name="draws">Draws</string>
    <string name="score_separator">-</string>
    <string name="action_share">Share</string>
    <string name="share_message">Shared with MatchApp: </string>
    <string name="gettingTeam">Getting team info...</string>

    <!--Fixture Details Screen Dummy Strings-->
    <string name="dummy_league_name">League Name</string>
    <string name="dummy_matchday">Matchday ##</string>
    <string name="dummy_match_date">01/01/2015</string>
    <string name="dummy_match_status">MATCH STATUS</string>
    <string name="dummy_match_time">Start time: 00:00 AM</string>
    <string name="dummy_home_team_name">Home Team Name</string>
    <string name="dummy_away_team_name">Away Team Name</string>
    <string name="dummy_home_team_goals">0</string>
    <string name="dummy_away_team_goals">0</string>
    <string name="dummy_home_team_wins">5</string>
    <string name="dummy_draws">2</string>
    <string name="dummy_away_team_wins">3</string>
    <string name="dummy_h2h_match_date">01/01/2014</string>

    <!--League Table Screen -->
    <string name="playedGames">PG</string>
    <string name="points">PTS</string>
    <string name="goalsInFavor">GF</string>
    <string name="goalsAgainst">GA</string>
    <string name="goalsDifference">DIF.</string>
    <string name="team">Team</string>
    <string name="position">Pos.</string>
    <string name="favorite">Favorite</string>
    <string name="gettingTeamInfo">Getting team info...</string>

    <!--Team Details Screen -->
    <string name="marketValue">Market value:</string>
    <string name="players">Players</string>
    <string name="squadNumber">No.</string>
    <string name="name">Name</string>
    <string name="playerPosition">Position</string>
    <string name="nationality">Nationality</string>

    <!--Transitions-->
    <string name="team_logo_transition">Team Logo Transition</string>

</resources>
