<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/list_item_card_view_outside_vertical_margin"
        android:layout_marginLeft="@dimen/card_view_outside_horizontal_margin"
        android:layout_marginRight="@dimen/card_view_outside_horizontal_margin"
        android:layout_marginTop="@dimen/list_item_card_view_outside_vertical_margin"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/h2h_match_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/dummy_h2h_match_date"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_view_inside_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/h2h_home_team"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/dummy_home_team_name"/>

                <TextView
                    android:id="@+id/h2h_home_team_goals"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0.1"
                    android:gravity="center_horizontal"
                    android:text="@string/dummy_home_team_goals"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="0.1"
                    android:gravity="center_horizontal"
                    android:text="@string/score_separator"/>

                <TextView
                    android:id="@+id/h2h_away_team_goals"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0.1"
                    android:gravity="center_horizontal"
                    android:text="@string/dummy_away_team_goals"/>

                <TextView
                    android:id="@+id/h2h_away_team"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/dummy_away_team_name"/>
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
